k8s/media-services/readarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media-services
  labels:
    app: readarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: readarr
